Cyberduck
https://cyberduck.io/

9.0.2
- [Feature] Support for Canada West (Calgary) region (S3) (#16215)
- [Feature] Support for Asia Pacific (Melbourne) region (S3)
- [Feature] Support for Israel (Tel Aviv) region (S3)
- [Feature] Support for Asia Pacific (Kuala Lumpur) region (S3)

9.0.1
- [Bugfix] Auto detect of vaults not always working (Cryptomator)
- [Bugfix] Missing server prompts before transfer (Windows) (#16140, #16113)
- [Bugfix] Hang on reopening Transfer window when transfer in progress (Windows) (#16147)
- [Bugfix] Crash when selected default protocol doesn’t exist (Windows) (#16115)

9.0.0
- [Feature] Versioning of files edited in external application (#15137)
- [Feature] Custom icons for protocols (Nextcloud, ownCloud)
- [Feature] Detect proxy configuration change for already open connections (#13274)
- [Feature] Rewrite implementation of Transfers window (Windows) (#15885)
- [Bugfix] Failure retrieving previous versions of file (ownCloud)
- [Bugfix] Missing shared folders (OneDrive Business) (#16036)

8.9.0
- [Feature] Resumable file uploads (ownCloud) (#15619)
- [Feature] Support authentication using SSH certificates (SFTP) (#15183)
- [Bugfix] Failure sharing file (ownCloud) (#15855, #15839)
- [Bugfix] Disable signing and encryption by default (SMB) (#15817)
- [Bugfix] NTLM authentication failures (WebDAV, SharePoint) (#15127)

8.8.2
- [Bugfix] Slower file transfers caused by connections per host limit (#15737)
- [Bugfix] Unable to edit HTTP header metadata (S3) (#15742)

8.8.1
- [Bugfix] Mismatch with Content-MD5 for multipart uploads to vault (S3, Cryptomator) (#15704)

8.8.0
- [Localize] Tamil Localization
- [Bugfix] Improved retry and backoff strategy for API errors (Backblaze B2) (#15601)
- [Bugfix] Require signing and encryption by default (SMB) (#15638)
- [Bugfix] Support upload to buckets with object lock enabled (S3) (#15557)
- [Bugfix] Transfer incomplete message when copying between servers (#15583)