@@ -93,6 +93,12 @@
     <li><span class="label label-success">Feature</span> Support for Asia Pacific (Melbourne) region (S3)</li>
     <li><span class="label label-success">Feature</span> Support for Israel (Tel Aviv) region (S3)</li>
     <li><span class="label label-success">Feature</span> Support for Asia Pacific (Kuala Lumpur) region (S3)</li>
+    <li><span class="label label-warning">Bugfix</span> No accessible elements in list of bookmarks (macOS) (<a
+            target="_blank" href="https://trac.cyberduck.io/ticket/10853">#10853</a>)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Unable to enter device serial number for MFA delete (S3) (<a
+            target="_blank" href="https://trac.cyberduck.io/ticket/16267">#16267</a>)
+    </li>
 </ul>
 
 <p>
